<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="anylayer_common_btn_no">取消</string>
    <string name="anylayer_common_btn_yes">确定</string>
    <string name="ap_connect">AP connection</string>
    <string name="ap_cover">The AP configured previously %1$s Inconsistent with the connected AP. Saving overwrites the previous configuration</string>
    <string name="app_name">Noo-Psyche</string>
    <string name="auto">Auto</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="cancel">Cancel</string>
    <string name="cant_set_time_light">The time point brightness cannot be set in manual mode</string>
    <string name="change_net">switching network</string>
    <string name="clear_set">Empty set</string>
    <string name="clear_set_sure">Confirm clearing Settings?</string>
    <string name="close">Close</string>
    <string name="close_preview">Close Demo Mode</string>
    <string name="close_preview_model">Please turn off demo mode first</string>
    <string name="connecting">Connection being established...</string>
    <string name="data_analysis_fail">Data Analysis Fail</string>
    <string name="data_channel_close">Data connection has been disconnected</string>
    <string name="data_channel_open">Data connection established</string>
    <string name="device_ip">Device IP</string>
    <string name="edit">Edit</string>
    <string name="esptouch1_configure_result_failed">Distribution network failure</string>
    <string name="esptouch1_configure_result_failed_port">Description Failed to set up the network assignment task, and the port may be occupied by other programs</string>
    <string name="esptouch1_configure_result_success">Distribution network to complete</string>
    <string name="esptouch1_configure_result_success_item">BSSID: %1$s, Addresses: %2$s</string>
    <string name="esptouch1_configure_result_time_out_failed">The network configuration failed. The configuration timed out. Procedure</string>
    <string name="esptouch1_configure_wifi_change_message">Wi-fi has been disconnected or changed</string>
    <string name="esptouch_message_location">Please turn on GPS to get Wi-Fi information。</string>
    <string name="esptouch_message_permission">Location permissions are required to obtain Wi-Fi information。 \nClick Apply permission</string>
    <string name="esptouch_message_wifi_connection">Please connect to Wi-Fi first</string>
    <string name="esptouch_message_wifi_frequency">Currently connected to 5G Wi-Fi, the device only supports 2.4g Wi-Fi</string>
    <string name="export">Export</string>
    <string name="export_success">Have exported the file to the system album</string>
    <string name="handle">Manual</string>
    <string name="handle_set_ip">Manual Configuration IP</string>
    <string name="hour">Hour</string>
    <string name="init_set">Factory Settings</string>
    <string name="init_set_sure">Confirm that factory Settings are restored?</string>
    <string name="input">Input</string>
    <string name="input_route_pass">Please enter the routing password</string>
    <string name="issue">common problem</string>
    <string name="location_request_failed">Failed in obtaining the location permission</string>
    <string name="location_request_refuse">Permission denied permanently. Please manually grant location permission</string>
    <string name="location_request_success">Succeeded in obtaining the location permission</string>
    <string name="minute">Minute</string>
    <string name="network_not_same">The configured network is inconsistent with the connected network</string>
    <string name="no_data">No Data</string>
    <string name="noo_official_website">https://noopsychereeflight.com/pages/userguide</string>
    <string name="open_preview">Demo Mode</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="please_net_connect">Check the network connection</string>
    <string name="reading_device_set">Reading device configuration...</string>
    <string name="route_connect">LAN connection</string>
    <string name="route_cover">The route configured previously %1$s Inconsistent with the connected route. Saving overwrites the previous configuration</string>
    <string name="route_name">Route Name：</string>
    <string name="route_pass">Route Pass：</string>
    <string name="save">Save</string>
    <string name="save_success">Save Success</string>
    <string name="scanner_code_fail">Failure to scan QR code</string>
    <string name="search_menu_title">Search</string>
    <string name="select_time_light_please">Please select time and brightness</string>
    <string name="set_network_and_model">Set the Wi-Fi network and working mode to be connected</string>
    <string name="set_real_ap">Configure the AP network correctly</string>
    <string name="set_success_read_fail">Description Failed to read the network</string>
    <string name="set_success_read_num_fail1">Failed to read the serial number#1</string>
    <string name="set_success_read_num_fail2">Failed to read the serial number#2</string>
    <string name="share">Share</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sure">Confirm</string>
    <string name="sync_time">Sync Time</string>
    <string name="system_time">system time：</string>
    <string name="time_set">Time point setting</string>
    <string name="time_set_please">Please set the time point</string>
    <string name="unknown_mac">Unknown MAC</string>
    <string name="version">version：%1$s</string>
    <string name="zero">Reset</string>
</resources>
