<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="360dp"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/normal_text_color"
        android:gravity="center"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/init_set"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/normal_text_color"
        android:gravity="center"
        android:id="@+id/twv_time"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/init_set_sure"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
    <com.nemo.caideng.widget.PreventRepeatButton
        android:textColor="@color/normal_text_color"
        android:id="@+id/btn_cancel"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/cancel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_sure"
        app:layout_constraintTop_toBottomOf="@+id/twv_time"/>
    <com.nemo.caideng.widget.PreventRepeatButton
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/btn_sure"
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/sure"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twv_time"/>
</androidx.constraintlayout.widget.ConstraintLayout>
