<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/content"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.nemo.caideng.widget.PreventRepeatButton
            android:textSize="18sp"
            android:textColor="@color/white"
            android:id="@+id/btn_change_net"
            android:background="@drawable/state_btn_back"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_net"/>
        <RadioGroup
            android:orientation="vertical"
            android:id="@+id/rg_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <RadioButton
                android:textSize="18sp"
                android:id="@+id/rb_ap_net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ap_connect"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <RadioButton
                android:textSize="18sp"
                android:id="@+id/rb_lan_net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/route_connect"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </RadioGroup>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/route_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:id="@+id/tv_route_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/tv_route_pass_title"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/route_pass"/>
        <LinearLayout
            android:id="@+id/ll_route_pass"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">
            <EditText
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/edit_route_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:hint="@string/input_route_pass"
                android:layout_weight="1"
                android:inputType="textPassword"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_show_hide_pass"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/icon_hidden_pass"
                android:scaleType="fitCenter"/>
        </LinearLayout>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/tv_ip_title"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/device_ip"/>
        <EditText
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/edit_ip"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/handle_set_ip"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/tv_remark_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="22sp"
            android:textColor="@android:color/holo_blue_light"
            android:id="@+id/tv_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue"/>
        <com.nemo.caideng.widget.PreventRepeatButton
            android:enabled="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btn_save"
            android:background="@drawable/state_btn_back"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:text="@string/save"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/progressView"
        android:background="#d9ffffff"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/testResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/progressBarStyleLarge"/>
        <com.nemo.caideng.widget.PreventRepeatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
