<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wifi_list"
            android:background="@drawable/shape_list_back"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="15sp"
                    android:textColor="@color/normal_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_time"/>
                <com.nemo.caideng.widget.DigitalClock
                    android:textSize="22sp"
                    android:textColor="@color/normal_text_color"
                    android:id="@+id/dc_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.nemo.caideng.widget.PreventRepeatButton
                    android:enabled="false"
                    android:id="@+id/btn_sync_time"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="同步时间"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <com.nemo.caideng.widget.PreventRepeatButton
                    android:enabled="false"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:id="@+id/btn_time_set"
                    android:background="@drawable/state_btn_back"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/time_set"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Switch
                    android:enabled="false"
                    android:textSize="12sp"
                    android:id="@+id/sw_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="25dp"
                    android:textOn="@string/auto"
                    android:textOff="@string/handle"
                    android:thumb="@drawable/shape_thumb"
                    android:switchTextAppearance="@style/thumb_text"
                    android:track="@drawable/shape_track"
                    android:showText="true"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <com.nemo.caideng.widget.CorrugationView
                android:id="@+id/cv_progress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="15dp"/>
        </FrameLayout>
        <CheckBox
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_demonstration"
            android:background="@drawable/state_btn_back"
            android:padding="8dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:button="@null"
            android:text="@string/open_preview"/>
        <com.nemo.caideng.widget.AllSeekNumView
            android:id="@+id/asnv_seek"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <com.nemo.caideng.widget.PreventRepeatButton
                android:enabled="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/btn_reset"
                android:background="@drawable/state_btn_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/init_set"
                android:layout_weight="1"/>
            <com.nemo.caideng.widget.PreventRepeatButton
                android:enabled="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/btn_zero"
                android:background="@drawable/state_btn_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:layout_weight="1"/>
            <com.nemo.caideng.widget.PreventRepeatButton
                android:enabled="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/btn_save"
                android:background="@drawable/state_btn_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
